--- a/.github/workflows/Example-1.yaml
+++ b/.github/workflows/Example-1.yaml
@@ -7,6 +7,8 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+            - name: checkout Repo
+              uses: action/checkout@v4
             - name: welcome Message
               run: echo "welcome to My Github Action tutorial"
             - name: list files
