--- a/.github/workflows/Example-1.yaml
+++ b/.github/workflows/Example-1.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
     first_job:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             - name: checkout Repo
               uses: actions/checkout@v4
